--- a/config/database.yml
+++ b/config/database.yml
@@ -13,10 +13,10 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   collation: utf8mb4_bin
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: oanda
-  password: oanda
-  host: localhost
+  pool: <%= ENV.fetch('RAILS_MAX_THREADS') { 5 } %>
+  username: <%= ENV.fetch('DB_USERNAME') { 'oanda' } %>
+  password: <%= ENV.fetch('DB_PASSWORD') { 'oanda' } %>
+  host: <%= ENV.fetch('DB_HOST') { 'localhost' } %>
 
 development:
   <<: *default
