--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,12 @@ jobs: # a collection of steps
           BUNDLE_PATH: vendor/bundle
           BUNDLER_VERSION: 2.0.2
           DB_HOST: 127.0.0.1
-          DB_PASSWORD: 'oanda'
-          DB_USERNAME: 'oanda'
+          DB_PASSWORD: ''
+          DB_USERNAME: 'root'
           RAILS_ENV: test
       - image: circleci/mariadb:10.4.11
+        environment:
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
       - image: redis:4.0.14
     steps: # a collection of executable commands
       - checkout # special step to check out source code to working directory
