--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,6 @@ jobs: # a collection of steps
           BUNDLE_JOBS: 3
           BUNDLE_RETRY: 3
           BUNDLE_PATH: vendor/bundle
-          BUNDLER_VERSION: 2.0.2
           DB_HOST: 127.0.0.1
           DB_PASSWORD: ''
           DB_USERNAME: 'root'
@@ -16,7 +15,10 @@ jobs: # a collection of steps
       - image: circleci/mariadb:10.4.11
         environment:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          TZ: 'Asia/Tokyo'
       - image: redis:4.0.14
+    environment:
+      TZ: 'Asia/Tokyo'
     steps: # a collection of executable commands
       - checkout # special step to check out source code to working directory
 
@@ -28,7 +30,7 @@ jobs: # a collection of steps
             sudo gem uninstall bundler
             sudo rm /usr/local/bin/bundle
             sudo rm /usr/local/bin/bundler
-            sudo gem install bundler
+            sudo gem install bundler:2.0.2
 
       # Which version of bundler?
       - run:
