--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,15 +22,10 @@ jobs: # a collection of steps
     steps: # a collection of executable commands
       - checkout # special step to check out source code to working directory
 
-      # Reinstall Bundler2
       - run:
-          name: Setup Bundler
+          name: Setup RubyGems and Bundler
           command: |
             sudo gem update --system
-            sudo gem uninstall bundler
-            sudo rm /usr/local/bin/bundle
-            sudo rm /usr/local/bin/bundler
-            sudo gem install bundler:2.0.2
 
       # Which version of bundler?
       - run:
