send test coverage to CodeClimate

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,6 +95,28 @@ commands:
           command: |-
             bin/rails db:create --trace
             bin/rails db:schema:load --trace
+  setup_test_reporter:
+    steps:
+      - run:
+          name: Setup Code Climate test-reporter
+          command: |-
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+            chmod +x ./cc-test-reporter
+            ./cc-test-reporter before-build
+  minitest:
+    steps:
+      - run:
+          name: Run minitest
+          command: |-
+            bundle exec rails test
+  system_test:
+    steps:
+      - run:
+          name: Run system test
+          command: |-
+            bundle exec rails test:system
+      - store_artifacts:
+          path: tmp/screenshots
   store_test_reports:
     steps:
       - store_test_results: # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
@@ -131,10 +153,7 @@ jobs: # a collection of steps
           ruby-version: '2.5'
       - wait_for_db
       - setup_database
-      - run:
-          name: Run minitest
-          command: |-
-            bundle exec rails test
+      - minitest
       - store_test_reports
   system-test-2-5:
     executor: node-browsers-2-5
@@ -150,13 +169,8 @@ jobs: # a collection of steps
           ruby-version: '2.5'
       - wait_for_db
       - setup_database
-      - run:
-          name: Run system test
-          command: |-
-            bundle exec rails test:system
+      - system_test
       - store_test_reports
-      - store_artifacts:
-          path: tmp/screenshots
   minitest-2-6:
     executor: node-browsers-2-6
     steps:
@@ -171,10 +185,7 @@ jobs: # a collection of steps
           ruby-version: '2.6'
       - wait_for_db
       - setup_database
-      - run:
-          name: Run minitest
-          command: |-
-            bundle exec rails test
+      - minitest
       - store_test_reports
   system-test-2-6:
     executor: node-browsers-2-6
@@ -190,13 +201,8 @@ jobs: # a collection of steps
           ruby-version: '2.6'
       - wait_for_db
       - setup_database
-      - run:
-          name: Run system test
-          command: |-
-            bundle exec rails test:system
+      - system_test
       - store_test_reports
-      - store_artifacts:
-          path: tmp/screenshots
   minitest-latest:
     executor: node-browsers-latest
     steps:
@@ -211,10 +217,11 @@ jobs: # a collection of steps
           ruby-version: latest
       - wait_for_db
       - setup_database
+      - setup_test_reporter
+      - minitest
       - run:
-          name: Run minitest
-          command: |-
-            bundle exec rails test
+          name: Upload test coverage
+          command: ./cc-test-reporter after-build --coverage-input-type simplecov --exit-code $?
       - store_test_reports
   system-test-latest:
     executor: node-browsers-latest
@@ -230,13 +237,8 @@ jobs: # a collection of steps
           ruby-version: latest
       - wait_for_db
       - setup_database
-      - run:
-          name: Run system test
-          command: |-
-            bundle exec rails test:system
+      - system_test
       - store_test_reports
-      - store_artifacts:
-          path: tmp/screenshots
 
 workflows:
   version: 2.1
