--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,9 +13,9 @@ common_env: &common_env
   TZ: 'Asia/Tokyo'
 
 executors:
-  latest:
+  2-7:
     docker:
-      - image: circleci/ruby:latest
+      - image: circleci/ruby:2.7
     environment:
       <<: *common_env
   node-browsers-2-5:
@@ -30,9 +30,9 @@ executors:
       - image: circleci/mariadb:10.4.11
     environment:
       <<: *common_env
-  node-browsers-latest:
+  node-browsers-2-7:
     docker:
-      - image: circleci/ruby:latest-node-browsers
+      - image: circleci/ruby:2.7-node-browsers
       - image: circleci/mariadb:10.4.11
     environment:
       <<: *common_env
@@ -114,17 +114,17 @@ commands:
 
 jobs: # a collection of steps
   brakeman:
-    executor: latest
+    executor: 2-7
     steps:
       - checkout
       - update_rubygems
       - which_bundler
       - which_ruby
       - restore_gems:
-          ruby-version: latest
+          ruby-version: '2.7'
       - install_gems
       - save_gems:
-          ruby-version: latest
+          ruby-version: '2.7'
       - run:
           name: Run Brakeman
           command: |-
@@ -193,34 +193,34 @@ jobs: # a collection of steps
       - setup_database
       - system_test
       - store_test_reports
-  minitest-latest:
-    executor: node-browsers-latest
+  minitest-2-7:
+    executor: node-browsers-2-7
     steps:
       - checkout
       - update_rubygems
       - which_bundler
       - which_ruby
       - restore_gems:
-          ruby-version: latest
+          ruby-version: '2.7'
       - install_gems
       - save_gems:
-          ruby-version: latest
+          ruby-version: '2.7'
       - wait_for_db
       - setup_database
       - minitest
       - store_test_reports
-  system-test-latest:
-    executor: node-browsers-latest
+  system-test-2-7:
+    executor: node-browsers-2-7
     steps:
       - checkout
       - update_rubygems
       - which_bundler
       - which_ruby
       - restore_gems:
-          ruby-version: latest
+          ruby-version: '2.7'
       - install_gems
       - save_gems:
-          ruby-version: latest
+          ruby-version: '2.7'
       - wait_for_db
       - setup_database
       - system_test
@@ -239,7 +239,7 @@ workflows:
     jobs:
       - minitest-2-6
       - system-test-2-6
-  ruby-latest-test:
+  ruby-2.7-test:
     jobs:
-      - minitest-latest
-      - system-test-latest
+      - minitest-2-7
+      - system-test-2-7
