--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,12 @@ executors:
       - image: circleci/mariadb:10.4.11
     environment:
       <<: *common_env
+  node-browsers-latest:
+    docker:
+      - image: circleci/ruby:latest-node-browsers
+      - image: circleci/mariadb:10.4.11
+    environment:
+      <<: *common_env
 
 commands:
   update_rubygems:
@@ -225,6 +231,38 @@ jobs: # a collection of steps
       - setup_database
       - system_test
       - store_test_reports
+  minitest-latest:
+    executor: node-browsers-latest
+    steps:
+      - checkout
+      - update_rubygems
+      - which_bundler
+      - which_ruby
+      - restore_gems:
+          ruby-version: 'latest'
+      - install_gems
+      - save_gems:
+          ruby-version: 'latest'
+      - wait_for_db
+      - setup_database
+      - minitest
+      - store_test_reports
+  system-test-latest:
+    executor: node-browsers-latest
+    steps:
+      - checkout
+      - update_rubygems
+      - which_bundler
+      - which_ruby
+      - restore_gems:
+          ruby-version: 'latest'
+      - install_gems
+      - save_gems:
+          ruby-version: 'latest'
+      - wait_for_db
+      - setup_database
+      - system_test
+      - store_test_reports
 
 workflows:
   version: 2
@@ -243,3 +281,7 @@ workflows:
     jobs:
       - minitest-2-7
       - system-test-2-7
+  ruby-latest-test:
+    jobs:
+      - minitest-latest
+      - system-test-latest
