--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,16 @@ commands:
       - run:
           name: Which Ruby?
           command: ruby -v
+  which_nodejs:
+    steps:
+      - run:
+          name: Which Node.js?
+          command: node --version
+  which_yarn:
+    steps:
+      - run:
+          name: Which Yarn?
+          command: yarn --version
   # Restore bundle cache
   # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
   restore_gems:
@@ -87,6 +97,24 @@ commands:
           key: bundle-v2-<< parameters.ruby-version >>-{{ checksum "Gemfile.lock" }}
           paths:
             - vendor/bundle
+  restore_packages:
+    steps:
+      - restore_cache:
+          name: Restore Yarn Package Cache
+          keys:
+            - yarn-packages-{{ checksum "yarn.lock" }}
+  install_packages:
+    steps:
+      - run:
+          name: Install Yarn Dependencies
+          command: yarn install --immutable
+  save_packages:
+    steps:
+      - save_cache:
+          name: Save Yarn Package Cache
+          key: yarn-packages-{{ checksum "yarn.lock" }}
+          paths:
+            - ~/.cache/yarn
   wait_for_db:
     steps:
     - run:
@@ -142,11 +170,15 @@ jobs: # a collection of steps
       - update_rubygems
       - which_bundler
       - which_ruby
+      - which_nodejs
       - restore_gems:
           ruby-version: '2.5'
       - install_gems
       - save_gems:
           ruby-version: '2.5'
+      - restore_packages
+      - install_packages
+      - save_packages
       - wait_for_db
       - setup_database
       - minitest
@@ -158,11 +190,15 @@ jobs: # a collection of steps
       - update_rubygems
       - which_bundler
       - which_ruby
+      - which_nodejs
       - restore_gems:
           ruby-version: '2.5'
       - install_gems
       - save_gems:
           ruby-version: '2.5'
+      - restore_packages
+      - install_packages
+      - save_packages
       - wait_for_db
       - setup_database
       - system_test
@@ -174,11 +210,15 @@ jobs: # a collection of steps
       - update_rubygems
       - which_bundler
       - which_ruby
+      - which_nodejs
       - restore_gems:
           ruby-version: '2.6'
       - install_gems
       - save_gems:
           ruby-version: '2.6'
+      - restore_packages
+      - install_packages
+      - save_packages
       - wait_for_db
       - setup_database
       - minitest
@@ -190,11 +230,15 @@ jobs: # a collection of steps
       - update_rubygems
       - which_bundler
       - which_ruby
+      - which_nodejs
       - restore_gems:
           ruby-version: '2.6'
       - install_gems
       - save_gems:
           ruby-version: '2.6'
+      - restore_packages
+      - install_packages
+      - save_packages
       - wait_for_db
       - setup_database
       - system_test
@@ -206,11 +250,15 @@ jobs: # a collection of steps
       - update_rubygems
       - which_bundler
       - which_ruby
+      - which_nodejs
       - restore_gems:
           ruby-version: '2.7'
       - install_gems
       - save_gems:
           ruby-version: '2.7'
+      - restore_packages
+      - install_packages
+      - save_packages
       - wait_for_db
       - setup_database
       - minitest
@@ -222,11 +270,15 @@ jobs: # a collection of steps
       - update_rubygems
       - which_bundler
       - which_ruby
+      - which_nodejs
       - restore_gems:
           ruby-version: '2.7'
       - install_gems
       - save_gems:
           ruby-version: '2.7'
+      - restore_packages
+      - install_packages
+      - save_packages
       - wait_for_db
       - setup_database
       - system_test
@@ -238,11 +290,15 @@ jobs: # a collection of steps
       - update_rubygems
       - which_bundler
       - which_ruby
+      - which_nodejs
       - restore_gems:
           ruby-version: 'latest'
       - install_gems
       - save_gems:
           ruby-version: 'latest'
+      - restore_packages
+      - install_packages
+      - save_packages
       - wait_for_db
       - setup_database
       - minitest
@@ -254,11 +310,15 @@ jobs: # a collection of steps
       - update_rubygems
       - which_bundler
       - which_ruby
+      - which_nodejs
       - restore_gems:
           ruby-version: 'latest'
       - install_gems
       - save_gems:
           ruby-version: 'latest'
+      - restore_packages
+      - install_packages
+      - save_packages
       - wait_for_db
       - setup_database
       - system_test
