--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,6 +130,12 @@ commands:
           command: |-
             bin/rails db:create --trace
             bin/rails db:schema:load --trace
+  webpack:
+    steps:
+      - run:
+          name: Build assets in advance
+          command: |-
+            bin/webpack
   minitest:
     steps:
       - run:
@@ -217,6 +223,7 @@ jobs: # a collection of steps
       - save_packages
       - wait_for_db
       - setup_database
+      - webpack
       - system_test
       - store_test_reports
   minitest-2-6:
@@ -257,6 +264,7 @@ jobs: # a collection of steps
       - save_packages
       - wait_for_db
       - setup_database
+      - webpack
       - system_test
       - store_test_reports
   minitest-2-7:
@@ -297,6 +305,7 @@ jobs: # a collection of steps
       - save_packages
       - wait_for_db
       - setup_database
+      - webpack
       - system_test
       - store_test_reports
   minitest-latest:
@@ -337,6 +346,7 @@ jobs: # a collection of steps
       - save_packages
       - wait_for_db
       - setup_database
+      - webpack
       - system_test
       - store_test_reports
 
