--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "webpack-bundle-analyzer": "^4.4.1",
     "webpack-dev-server": "^3.11.2"
   },
+  "resolutions": {
+    "is-svg": "^4.2.2"
+  },
   "standard": {
     "globals": [
       "$"
