--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@popperjs/core": "^2.9.2",
     "@rails/ujs": "^6.1.3",
     "@rails/webpacker": "5.4.0",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.0.1",
     "flatpickr": "^4.6.9",
     "import-glob-loader": "^1.1.0",
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
-    "popper.js": "^1.16.1",
     "rails-erb-loader": "^5.5.2",
     "resolve-url-loader": "^4.0.0",
     "tabulator-tables": "^4.9.3",
