is password fixed?

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,9 +20,9 @@ jobs:
       BUNDLE_RETRY: 3
       BUNDLE_PATH: vendor/bundle
       DB_HOST: 127.0.0.1
-      DB_PASSWORD: ''
+      DB_PASSWORD: 'root'
       DB_USERNAME: 'root'
-      MYSQL_ALLOW_EMPTY_PASSWORD: yes
+#      MYSQL_ALLOW_EMPTY_PASSWORD: yes
       RAILS_ENV: test
       NODE_ENV: test
       TZ: 'Asia/Tokyo'
