--- a/package.json
+++ b/package.json
@@ -1,29 +1,46 @@
 {
+  "name": "oanda-api-rails",
+  "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@popperjs/core": "^2.10.2",
     "@rails/ujs": "^6.1.4",
-    "@rails/webpacker": "5.4.3",
+    "@rails/webpacker": "^6.0.0-rc.6",
+    "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
+    "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.1.1",
     "flatpickr": "^4.6.9",
-    "import-glob-loader": "^1.1.0",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
+    "mini-css-extract-plugin": "^2.4.4",
     "rails-erb-loader": "^5.5.2",
     "resolve-url-loader": "^4.0.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
     "tabulator-tables": "^5.0.7",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0"
   },
+  "version": "0.1.0",
+  "babel": {
+    "presets": [
+      "./node_modules/@rails/webpacker/package/babel/preset.js"
+    ]
+  },
+  "browserslist": [
+    "defaults"
+  ],
   "devDependencies": {
+    "@webpack-cli/serve": "^1.6.0",
     "markdownlint-cli": "^0.29.0",
     "standard": "^16.0.4",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
-  },
-  "resolutions": {
-    "is-svg": "^4.2.2"
+    "webpack-dev-server": "^4.4.0"
   },
   "standard": {
     "globals": [
