--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
     "tabulator-tables": "^5.0.7",
-    "turbolinks": "^5.2.0",
-    "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0"
+    "turbolinks": "^5.2.0"
   },
   "devDependencies": {
     "@webpack-cli/serve": "^1.6.0",
