--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.1.3",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.1.1",
+    "expose-loader": "^3.1.0",
     "flatpickr": "^4.6.9",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
