--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Start local MySQL
-        run: sudo /etc/init.d/mysql start
+        run: sudo systemctl start mysql.service
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
