--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@hotwired/turbo-rails": "^7.1.1",
     "@popperjs/core": "^2.11.2",
     "@rails/ujs": "^7.0.1",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.1.3",
     "flatpickr": "^4.6.9",
     "js-cookie": "^3.0.1",
-    "tabulator-tables": "^5.0.10",
-    "turbolinks": "^5.2.0"
+    "tabulator-tables": "^5.0.10"
   },
   "devDependencies": {
     "markdownlint-cli": "^0.30.0",
