--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.1.3",
     "flatpickr": "^4.6.9",
     "js-cookie": "^3.0.1",
+    "sass": "^1.49.7",
     "tabulator-tables": "^5.1.0"
   },
   "devDependencies": {
@@ -19,5 +20,8 @@
   },
   "resolutions": {
     "is-svg": "^4.2.2"
+  },
+  "scripts": {
+    "build:css": "sass ./app/assets/stylesheets/application.sass.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   }
 }
