--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
           bin/rails db:create --trace
           bin/rails db:schema:load --trace
       - name: Build assets in advance
-        run: bin/webpack
+        run: yarn build:css
       - name: Run unit tests
         run: bin/rails test
       - name: Upload unit test coverage report
