--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@hotwired/turbo-rails": "^7.1.1",
     "@popperjs/core": "^2.11.2",
-    "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.1.3",
     "flatpickr": "^4.6.9",
     "js-cookie": "^3.0.1",
@@ -14,12 +13,7 @@
   },
   "devDependencies": {
     "markdownlint-cli": "^0.30.0",
-    "standard": "^16.0.4",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-dev-server": "^3.11.3"
-  },
-  "resolutions": {
-    "is-svg": "^4.2.2"
+    "standard": "^16.0.4"
   },
   "scripts": {
     "build:css": "sass ./app/assets/stylesheets/application.sass.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
