style: Disable Minitest/AssertPredicate
This cop makes sense, but there is no `assert_not_predicate` method,
so there is no harmony.
The following test code does not look very good.

```ruby
assert_predicate(obj, :one?)
assert_not obj.zero?
```

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -39,6 +39,8 @@ Metrics/PerceivedComplexity:
   Exclude:
     - 'test/**/*.rb'
 
+Minitest/AssertPredicate:
+  Enabled: false
 Minitest/MultipleAssertions:
   Enabled: false
 
