style: Disable Style/FrozenStringLiteralComment on ERB
This rule comes from https://github.com/Shopify/erb-lint#rubocop

--- a/.erb-lint.yml
+++ b/.erb-lint.yml
@@ -22,3 +22,5 @@ linters:
         Enabled: false
       Rails/OutputSafety:
         Enabled: false
+      Style/FrozenStringLiteralComment:
+        Enabled: false
