test: Change the process of building assets
* Use `assets:precompile` instead

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
           bin/rails db:create --trace
           bin/rails db:schema:load --trace
       - name: Build assets in advance
-        run: yarn build:css
+        run: bin/rails assets:precompile
       - name: Run unit tests
         run: bin/rails test
       - name: Upload unit test coverage report
