test: Set timeout-minutes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
           - '3.2'
           - '3.1'
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     env:
       DB_HOST: 127.0.0.1
       DB_PASSWORD: 'root'
@@ -63,6 +64,7 @@ jobs:
           path: tmp/screenshots/
   brakeman:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -75,6 +77,7 @@ jobs:
         run: bundle exec brakeman
   standard:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     env:
       NODE_ENV: test
     steps:
@@ -89,6 +92,7 @@ jobs:
         run: yarn standard
   rubocop:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -101,6 +105,7 @@ jobs:
         run: bundle exec rubocop
   erb-lint:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -113,6 +118,7 @@ jobs:
         run: bundle exec erblint --lint-all
   markdownlint:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     env:
       NODE_ENV: test
     steps:
